[package]
name = "rb-tree"
# Versioning: https://doc.rust-lang.org/cargo/reference/manifest.html#the-version-field
version = "0.1.0"
edition = "2021"
authors = ["Daniel Thurau <daniel.n.thurau@gmail.com"]
description = "A textbook implementation of a Red-Black Tree."
readme = "README.md"
repository = "https://github.com/DanielThurau/rb-tree"
license = "MIT"
keywords = ["rb-tree", "data-structures", "tree", "trees"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.0.0"

[[bench]]
name = "benchmark"
harness = false
